// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for SegmentProfiles's sendGroup destination action: all fields 1`] = `
Object {
  "data": Object {
    "batch": Array [
      Object {
        "anonymousId": "tKaa(2A",
        "context": Object {
          "consent": Object {
            "categoryPreferences": Object {
              "analytics": true,
              "marketing": false,
            },
          },
        },
        "groupId": "tKaa(2A",
        "integrations": Object {
          "All": false,
        },
        "messageId": "tKaa(2A",
        "timestamp": "2021-02-01T00:00:00.000Z",
        "traits": Object {
          "testType": "tKaa(2A",
        },
        "type": "group",
        "userId": "tKaa(2A",
      },
    ],
  },
  "output": "Action Executed",
}
`;

exports[`Testing snapshot for SegmentProfiles's sendGroup destination action: required fields 1`] = `
Object {
  "data": Object {
    "batch": Array [
      Object {
        "anonymousId": "tKaa(2A",
        "context": Object {
          "consent": Object {
            "categoryPreferences": Object {
              "analytics": true,
              "marketing": false,
            },
          },
        },
        "groupId": "tKaa(2A",
        "integrations": Object {
          "All": false,
        },
        "messageId": "tKaa(2A",
        "timestamp": undefined,
        "traits": Object {},
        "type": "group",
        "userId": "tKaa(2A",
      },
    ],
  },
  "output": "Action Executed",
}
`;
